@@ -1,10 +1,3 @@
-if OS_WIN32
-NO_UNDEFINED_REQUIRED_LIBS = 				\
-	$(top_builddir)/e-util/libeutil.la		\
-	$(top_builddir)/mail/libevolution-mail.la	\
-	$(EVOLUTION_MAIL_LIBS)
-endif
-
 INCLUDES =						\
 	-I$(top_srcdir)					\
 	-I$(top_builddir)/mail				\
@@ -18,6 +11,8 @@ plugin_LTLIBRARIES = libmail-account-disable.la
 
 libmail_account_disable_la_SOURCES = mail-account-disable.c
 libmail_account_disable_la_LDFLAGS = -module -avoid-version $(NO_UNDEFINED)
-libmail_account_disable_la_LIBADD = $(NO_UNDEFINED_REQUIRED_LIBS)
+libmail_account_disable_la_LIBADD = $(top_builddir)/e-util/libeutil.la		\
+	$(top_builddir)/mail/libevolution-mail.la	\
+	$(EVOLUTION_MAIL_LIBS)
 
 EXTRA_DIST = org-gnome-mail-account-disable.eplug.xml
